content/_generated-doc/2.7/config/quarkus-reactive-mssql-client-config-group-data-sources-reactive-mssql-config-data-source-reactive-mssql-outer-nested-named-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-reactive-mssql-client-config-group-data-sources-reactive-mssql-config-data-source-reactive-mssql-outer-nested-named-config_configuration]]link:#quarkus-reactive-mssql-client-config-group-data-sources-reactive-mssql-config-data-source-reactive-mssql-outer-nested-named-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-reactive-mssql-client-config-group-data-sources-reactive-mssql-config-data-source-reactive-mssql-outer-nested-named-config_quarkus.datasource.-datasource-name-.reactive.mssql.packet-size]]`link:#quarkus-reactive-mssql-client-config-group-data-sources-reactive-mssql-config-data-source-reactive-mssql-outer-nested-named-config_quarkus.datasource.-datasource-name-.reactive.mssql.packet-size[quarkus.datasource."datasource-name".reactive.mssql.packet-size]`

[.description]
--
The desired size (in bytes) for TDS packets.
--|int 
|


a| [[quarkus-reactive-mssql-client-config-group-data-sources-reactive-mssql-config-data-source-reactive-mssql-outer-nested-named-config_quarkus.datasource.-datasource-name-.reactive.mssql.ssl]]`link:#quarkus-reactive-mssql-client-config-group-data-sources-reactive-mssql-config-data-source-reactive-mssql-outer-nested-named-config_quarkus.datasource.-datasource-name-.reactive.mssql.ssl[quarkus.datasource."datasource-name".reactive.mssql.ssl]`

[.description]
--
Whether SSL/TLS is enabled.
--|boolean 
|`false`

|===