content/_generated-doc/3.0/config/quarkus-reactive-mssql-client-config-group-data-sources-reactive-mssql-config-data-source-reactive-mssql-outer-nested-named-config.adoc

:summaryTableId: quarkus-reactive-mssql-client-config-group-data-sources-reactive-mssql-config-data-source-reactive-mssql-outer-nested-named-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-reactive-mssql-client-config-group-data-sources-reactive-mssql-config-data-source-reactive-mssql-outer-nested-named-config_configuration]]link:#quarkus-reactive-mssql-client-config-group-data-sources-reactive-mssql-config-data-source-reactive-mssql-outer-nested-named-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-reactive-mssql-client-config-group-data-sources-reactive-mssql-config-data-source-reactive-mssql-outer-nested-named-config_quarkus.datasource.-datasource-name-.reactive.mssql.packet-size]]`link:#quarkus-reactive-mssql-client-config-group-data-sources-reactive-mssql-config-data-source-reactive-mssql-outer-nested-named-config_quarkus.datasource.-datasource-name-.reactive.mssql.packet-size[quarkus.datasource."datasource-name".reactive.mssql.packet-size]`

[.description]
--
The desired size (in bytes) for TDS packets.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MSSQL_PACKET_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MSSQL_PACKET_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-reactive-mssql-client-config-group-data-sources-reactive-mssql-config-data-source-reactive-mssql-outer-nested-named-config_quarkus.datasource.-datasource-name-.reactive.mssql.ssl]]`link:#quarkus-reactive-mssql-client-config-group-data-sources-reactive-mssql-config-data-source-reactive-mssql-outer-nested-named-config_quarkus.datasource.-datasource-name-.reactive.mssql.ssl[quarkus.datasource."datasource-name".reactive.mssql.ssl]`

[.description]
--
Whether SSL/TLS is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MSSQL_SSL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MSSQL_SSL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===